k8s/vault/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: vault
#   namespace: vault
#   labels:
#     app: vault
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-dns01
#     nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
#     nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
# spec:
#   ingressClassName: private
  
#   tls:
#     - hosts:
#         - vault.internal.newsbro.cc
#       secretName: vault-tls

#   rules:
#     - host: vault.internal.newsbro.cc
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: vault
#                 port:
#                   number: 8200
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  ingressClassName: private

  rules:
    - host: vault.internal.newsbro.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
